# python_ai_aplicada_langchain

./: .env.example  main.py  pyproject.toml
src/langchain_section/config/: settings.py
src/langchain_section/core/: llm.py
src/langchain_section/demos/: demo_lcel.py
